--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ div{
   font-size:130%;
 }
 #teksti1{
-  border-radius:4px;
+  border-radius:10px;
   background-color:#fa7db1;
   text-indent:20px;
   height:280px ;
@@ -70,10 +70,43 @@ height: 30px;
 #teht_a{
   background-color:white;
 }
-#h11 {
-color:#004987;
-}
 #cb {
   background-color: #004987;
 color:black;
 }
+#alaosa {
+  width: 60%;
+  background-color: #fa7db1;
+}
+#hh {
+  position: absolute;
+  top:220px;
+  right:830px;
+  font-family: sans-serif;
+}
+.huomio {
+  background-color: red;
+  width: 220px;
+  position: absolute;
+  right:960px;
+  background-size: 130px 55px;
+  margin: auto;
+  color:black;
+  opacity:0.85 ;
+  font-size: 28px;
+  border-radius: 10px;
+}
+#checkboxit{
+  font-family: sans-serif;
+  color:black;
+  position: absolute;
+  padding: 20px;
+  top:400px;
+  border-radius: 10px;
+  width: 67%;
+  left:293px;
+}
+#ggg{
+  visibility: hidden;
+}
+
